// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container maxWidth prop successfully set maxWidth on container 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding: 0 8px;
  max-width: 1024px;
}

<div
  className="c0"
/>
`;

exports[`Container should render a <Container /> component with default theme max-width 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
  padding: 0 8px;
  max-width: 940px;
}

<div
  className="c0"
/>
`;
